Bug 1409133 - Avoid shrinking tabs through ::before elements when moving them. r=dao
As mentioned in the comment:

Note that this doesn't perfectly solve the issue (dragged tabs
may still resize very slightly) on some DPI settings with uneven
scaling factors on Windows, because of bug 477157.

We consider the fix in this patch good enough for now.

MozReview-Commit-ID: BbpxLVq8AEb

UltraBlame original commit: b2998f106294f4e76467382dfa796f3dfafab46c

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -612,6 +612,18 @@ tabbrowser {
   opacity: 0.3;
 }
 
+
+
+
+
+
+
+
+
+.tabbrowser-tab::before {
+  margin-inline-start: -1px;
+}
+
 %ifdef CAN_DRAW_IN_TITLEBAR
 %ifdef MENUBAR_CAN_AUTOHIDE
 :root[tabsintitlebar]:not([extradragspace]) #toolbar-menubar[autohide=true] + #TabsToolbar > #tabbrowser-tabs > .tabbrowser-tab::after,
